[gd_scene load_steps=2 format=3 uid="uid://dafsy7q7qk1pc"]

[ext_resource type="Script" uid="uid://dqdtht3jvouki" path="res://scripts/cenario/spawn_mobilia.gd" id="1_w3ihu"]

[node name="SpawnMobilia" type="Node2D"]
script = ExtResource("1_w3ihu")

[node name="spawn_mobilia01" type="Node2D" parent="."]
position = Vector2(55, 195)

[node name="spawn_mobilia02" type="Node2D" parent="."]
position = Vector2(152, 195)

[node name="spawn_mobilia03" type="Node2D" parent="."]
position = Vector2(319, 194)

[node name="spawn_mobilia04" type="Node2D" parent="."]
position = Vector2(400, 195)
